# arrow-flight-kdb-rs

./: Cargo.toml
data/: orders.csv
src/: main.rs  server.rs
tests/: server_test.rs
